<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

				<RelativeLayout android:id="@+id/shape_down"
					android:layout_marginTop="506dp"
					android:layout_marginStart="225dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/ellipse_3"
						android:background="@drawable/ellipse_3_shape"
						 android:alpha="0.37000000476837"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="59dp"
						android:layout_width="200dp"
						android:layout_height="200dp" />

					<View   android:id="@+id/ellipse_4"
						android:background="@drawable/ellipse_4_shape"
						 android:alpha="0.37000000476837"
						 android:layout_marginStart="64dp"
						android:layout_marginTop="0dp"
						android:layout_width="200dp"
						android:layout_height="200dp" />

				</RelativeLayout>


	<com.google.android.material.bottomnavigation.BottomNavigationView
		android:id="@+id/navigation"
		android:layout_width="400dp"
		android:layout_height="56dp"
		android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true"
		android:layout_marginStart="11dp"
		android:layout_marginTop="602dp"
		android:layout_marginEnd="0dp">

		<ImageButton
			android:id="@+id/vector"
			android:layout_width="41dp"
			android:layout_height="match_parent"
			android:layout_marginStart="230dp"
			android:contentDescription="vector"
			android:src="@drawable/heartpulse_image_foreground" />

		<ImageButton
			android:id="@+id/vector_ek1"
			android:layout_width="42dp"
			android:layout_height="match_parent"
			android:layout_marginStart="130dp"
			android:layout_marginTop="0dp"
			android:contentDescription="vector_ek1"
			android:src="@drawable/chat_image_foreground" />

		<ImageButton
			android:id="@+id/vector_ek2"
			android:layout_width="45dp"
			android:layout_height="match_parent"
			android:layout_marginStart="30dp"
			android:layout_marginTop="0dp"
			android:contentDescription="vector_ek2"
			android:src="@drawable/home_image_foreground" />

		<ImageButton
			android:id="@+id/vector_ek3"
			android:layout_width="40dp"
			android:layout_height="50dp"
			android:layout_marginStart="320dp"
			android:layout_marginTop="0dp"
			android:contentDescription="vector_ek3"
			android:src="@drawable/smiley_image_foreground" />

	</com.google.android.material.bottomnavigation.BottomNavigationView>


				<RelativeLayout android:id="@+id/shape"
					android:layout_marginTop="-124dp"
					android:layout_marginStart="-127dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/ellipse_1"
						android:background="@drawable/ellipse_1_shape"
						 android:alpha="0.37000000476837"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="65dp"
						android:layout_width="200dp"
						android:layout_height="200dp" />

					<View   android:id="@+id/ellipse_2"
						android:background="@drawable/ellipse_2_shape"
						 android:alpha="0.37000000476837"
						 android:layout_marginStart="79dp"
						android:layout_marginTop="0dp"
						android:layout_width="200dp"
						android:layout_height="200dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/app_name"
					android:layout_marginTop="22dp"
					android:layout_marginStart="17dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView
						android:id="@+id/bans"
						android:layout_width="118dp"
						android:layout_height="66dp"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:fontFamily="sans-serif-black"
						android:text="@string/bans_string"
						android:textColor="@color/bans_color"
						android:textSize="30sp"
						android:textStyle="bold" />

				</RelativeLayout>

				<ImageView android:id="@+id/vector_ek4"
					android:src="@drawable/back_icon"
					android:contentDescription="vector_ek4"
					 android:layout_marginStart="13dp"
					android:layout_marginTop="88dp"
					android:layout_width="40dp"
					android:layout_height="50dp" />

	<TextView
		android:id="@+id/notifications"
		android:layout_width="174dp"
		android:layout_height="55.5dp"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginLeft="96dp"
		android:layout_marginTop="80dp"
		android:fontFamily="sans-serif-medium"
		android:gravity="center"
		android:text="@string/notifications_string"
		android:textColor="@color/bans_color"
		android:textSize="25sp" />

	<TextView
		android:id="@+id/today"
		android:layout_width="79dp"
		android:layout_height="40dp"
		android:layout_alignParentEnd="true"
		android:layout_marginLeft="11dp"
		android:layout_marginTop="141dp"
		android:layout_marginEnd="321dp"
		android:fontFamily="sans-serif-medium"
		android:text="@string/today_string"
		android:textColor="@color/today_color"
		android:textSize="22sp" />

	<TextView
		android:id="@+id/clear_all"
		android:layout_width="98dp"
		android:layout_height="44dp"
		android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true"
		android:layout_gravity="center_vertical|end"
		android:layout_marginStart="294dp"
		android:layout_marginLeft="255dp"
		android:layout_marginTop="139dp"
		android:layout_marginEnd="19dp"
		android:fontFamily="sans-serif-medium"
		android:gravity="end"
		android:text="@string/clear_all_string"
		android:textColor="@color/today_color"
		android:textSize="22sp" />

	<View
		android:id="@+id/rectangle_7"
		android:layout_width="match_parent"
		android:layout_height="76dp"
		android:layout_marginStart="0dp"
		android:layout_marginTop="162dp"
		android:alpha="0.50999999046326"
		android:background="@drawable/rectangle_7_shape" />

	<TextView
		android:id="@+id/now"
		android:layout_width="46dp"
		android:layout_height="33.5dp"
		android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true"
		android:layout_gravity="center_vertical|end"
		android:layout_marginStart="342dp"
		android:layout_marginLeft="317dp"
		android:layout_marginTop="162dp"
		android:layout_marginEnd="23dp"
		android:fontFamily="sans-serif-medium"
		android:gravity="end"
		android:text="@string/now_string"
		android:textColor="@color/now_color"
		android:textSize="18sp" />

	<ImageView android:id="@+id/ellipse_8"
					android:src="@drawable/bubble_chart_24"
					android:contentDescription="ellipse_8"
					 android:layout_marginStart="19dp"
					android:layout_marginTop="179dp"
					android:layout_width="40dp"
					android:layout_height="40dp" />

	<TextView
		android:id="@+id/meghan_phoebe"
		android:layout_width="171dp"
		android:layout_height="42.5dp"
		android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true"
		android:layout_gravity="center_vertical|end"
		android:layout_marginStart="67dp"
		android:layout_marginLeft="67dp"
		android:layout_marginTop="178dp"
		android:layout_marginEnd="173dp"
		android:fontFamily="sans-serif-black"
		android:gravity="end"
		android:text="@string/meghan_phoebe_string"
		android:textColor="@color/bans_color"
		android:textSize="20sp" />

	<TextView
		android:id="@+id/sent_a_support_gift_card__"
		android:layout_width="232dp"
		android:layout_height="24dp"
		android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true"
		android:layout_gravity="center_vertical|end"
		android:layout_marginStart="60dp"
		android:layout_marginLeft="58dp"
		android:layout_marginTop="202dp"
		android:layout_marginEnd="119dp"
		android:fontFamily="sans-serif-medium"
		android:gravity="end"
		android:text="@string/sent_a_support_gift_card___string"
		android:textColor="@color/bans_color"
		android:textSize="18sp" />

</RelativeLayout>