<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

				<RelativeLayout android:id="@+id/shape_down"
					android:layout_marginTop="506dp"
					android:layout_marginStart="225dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/ellipse_3"
						android:background="@drawable/ellipse_3_shape"
						 android:alpha="0.37000000476837"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="59dp"
						android:layout_width="200dp"
						android:layout_height="200dp" />

					<View   android:id="@+id/ellipse_4"
						android:background="@drawable/ellipse_4_shape"
						 android:alpha="0.37000000476837"
						 android:layout_marginStart="64dp"
						android:layout_marginTop="0dp"
						android:layout_width="200dp"
						android:layout_height="200dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/shape"
					android:layout_marginTop="-124dp"
					android:layout_marginStart="-127dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/ellipse_1"
						android:background="@drawable/ellipse_1_shape"
						 android:alpha="0.37000000476837"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="65dp"
						android:layout_width="200dp"
						android:layout_height="200dp" />

					<View   android:id="@+id/ellipse_2"
						android:background="@drawable/ellipse_2_shape"
						 android:alpha="0.37000000476837"
						 android:layout_marginStart="79dp"
						android:layout_marginTop="0dp"
						android:layout_width="200dp"
						android:layout_height="200dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/app_name"
					android:layout_marginTop="22dp"
					android:layout_marginStart="17dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView
						android:id="@+id/bans"
						android:layout_width="118dp"
						android:layout_height="66dp"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:fontFamily="sans-serif-black"
						android:text="@string/bans_string"
						android:textColor="@color/bans_color"
						android:textSize="30sp"
						android:textStyle="bold" />

				</RelativeLayout>


	<Button
		android:id="@+id/log_in"
		android:layout_width="334dp"
		android:layout_height="71dp"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginStart="35dp"
		android:layout_marginTop="480dp"
		android:fontFamily="sans-serif-black"
		android:gravity="center"
		android:text="@string/log_in_string"
		android:textColor="@color/bans_color"
		android:backgroundTint="#F3EA17"
		android:textSize="20sp" />

	<TextView
		android:id="@+id/not_a_member__sign_up"
		android:layout_width="253dp"
		android:layout_height="44dp"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginLeft="75dp"
		android:layout_marginTop="602dp"
		android:fontFamily="sans-serif-medium"
		android:gravity="center"
		android:text="@string/not_a_member__sign_up_string"
		android:textColor="@color/bans_color"
		android:textSize="20sp" />


	<TextView
		android:id="@+id/welcome_back"
		android:layout_width="258dp"
		android:layout_height="66dp"
		android:layout_centerHorizontal="true"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginLeft="53dp"
		android:layout_marginTop="90dp"
		android:fontFamily="sans-serif-medium"
		android:gravity="center"
		android:text="@string/welcome_back_string"
		android:textColor="@color/bans_color"
		android:textSize="30sp" />

	<RelativeLayout android:id="@+id/input"
					android:layout_marginTop="382dp"
					android:layout_marginStart="-1dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_6"
						android:background="@drawable/rectangle_6_shape"
						 android:layout_marginStart="20dp"
						android:layout_marginTop="0dp"
						android:layout_width="357dp"
						android:layout_height="50dp" />

					<EditText
						android:id="@+id/username"
						android:layout_width="123dp"
						android:layout_height="44dp"
						android:layout_marginLeft="30dp"
						android:layout_marginTop="0dp"
						android:fontFamily="sans-serif-medium"
						android:hint="Password"
						android:textColor="@color/bans_color"
						android:textColorHint="@color/bans_color"
						android:textSize="20sp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/input_ek1"
					android:layout_marginTop="309dp"
					android:layout_marginStart="-1dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View
						android:id="@+id/rectangle_6_ek1"
						android:layout_width="357dp"
						android:layout_height="50dp"
						android:layout_marginStart="20dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/rectangle_6_ek1_shape" />

					<EditText
						android:id="@+id/username_ek1"
						android:layout_width="188dp"
						android:layout_height="wrap_content"
						android:layout_marginLeft="30dp"
						android:layout_marginTop="0dp"
						android:fontFamily="sans-serif-medium"
						android:hint="Email"
						android:textColor="@color/bans_color"
						android:textColorHint="@color/bans_color"
						android:textSize="20sp" />

				</RelativeLayout>



</RelativeLayout>

